@@ -21,16 +21,8 @@ import org.junit.Test;
 import salve.InstrumentationException;
 
 public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest {
-	public void foo() {
-		double d;
-		Double dd = null;
-
-		if (dd > 0) {
-			d = 5;
-		}
-	}
-
-	@Test public void testArgumentTypeErrorChecking() throws Exception {
+	@Test
+	public void testArgumentTypeErrorChecking() throws Exception {
 		try {
 			create("IllegalArgBean");
 			fail();
@@ -41,7 +33,8 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 		}
 	}
 
-	@Test public void testDoubleReturnTypes() throws Exception {
+	@Test
+	public void testDoubleReturnTypes() throws Exception {
 		Bean bean = (Bean) create("Bean");
 		assertTrue(1l == bean.test12(1l));
 		assertTrue(new Double(1).equals(bean.test13(1)));
@@ -54,7 +47,7 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 		}
 
 		try {
-			bean.test13(new Double(0));
+			bean.test13(Double.valueOf(0));
 			fail("Expected IllegalStateException - GT0 violated");
 		} catch (IllegalStateException e) {
 			// expected
@@ -62,7 +55,8 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 
 	}
 
-	@Test public void testDoubles() throws Exception {
+	@Test
+	public void testDoubles() throws Exception {
 		Bean bean = (Bean) create("Bean");
 
 		bean.test3(1);
@@ -84,7 +78,8 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 		}
 	}
 
-	@Test public void testFloatReturnTypes() throws Exception {
+	@Test
+	public void testFloatReturnTypes() throws Exception {
 		Bean bean = (Bean) create("Bean");
 		assertTrue(1f == bean.test14(1f));
 		assertTrue(new Float(1).equals(bean.test15(1f)));
@@ -97,7 +92,7 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 		}
 
 		try {
-			bean.test15(new Integer(0));
+			bean.test15(Integer.valueOf(0));
 			fail("Expected IllegalStateException - GT0 violated");
 		} catch (IllegalStateException e) {
 			// expected
@@ -105,7 +100,8 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 
 	}
 
-	@Test public void testFloats() throws Exception {
+	@Test
+	public void testFloats() throws Exception {
 		Bean bean = (Bean) create("Bean");
 
 		bean.test5(1.0f);
@@ -127,7 +123,8 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 		}
 	}
 
-	@Test public void testGE0Errors() throws Exception {
+	@Test
+	public void testGE0Errors() throws Exception {
 		Bean bean = (Bean) create("Bean");
 
 		try {
@@ -138,7 +135,8 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 		}
 	}
 
-	@Test public void testGT0Errors() throws Exception {
+	@Test
+	public void testGT0Errors() throws Exception {
 		Bean bean = (Bean) create("Bean");
 
 		try {
@@ -155,10 +153,11 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 		}
 	}
 
-	@Test public void testIntegerReturnTypes() throws Exception {
+	@Test
+	public void testIntegerReturnTypes() throws Exception {
 		Bean bean = (Bean) create("Bean");
 		assertTrue(1 == bean.test10(1));
-		assertTrue(new Integer(1).equals(bean.test10(1)));
+		assertTrue(Integer.valueOf(1).equals(bean.test10(1)));
 
 		try {
 			bean.test10(0);
@@ -168,7 +167,7 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 		}
 
 		try {
-			bean.test11(new Integer(0));
+			bean.test11(Integer.valueOf(0));
 			fail("Expected IllegalStateException - GT0 violated");
 		} catch (IllegalStateException e) {
 			// expected
@@ -176,7 +175,8 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 
 	}
 
-	@Test public void testIntegers() throws Exception {
+	@Test
+	public void testIntegers() throws Exception {
 		Bean bean = (Bean) create("Bean");
 
 		bean.test1(1);
@@ -188,17 +188,18 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 			// expected
 		}
 
-		bean.test2(new Integer(1));
-		bean.test2(new Integer(0));
+		bean.test2(Integer.valueOf(1));
+		bean.test2(Integer.valueOf(0));
 		try {
-			bean.test2(new Integer(-1));
+			bean.test2(Integer.valueOf(-1));
 			fail("Expected IllegalArgumentException - GE0 violated");
 		} catch (IllegalArgumentException e) {
 			// expected
 		}
 	}
 
-	@Test public void testLE0Errors() throws Exception {
+	@Test
+	public void testLE0Errors() throws Exception {
 		Bean bean = (Bean) create("Bean");
 
 		try {
@@ -209,16 +210,18 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 		}
 	}
 
-	@Test public void testLogicNoErrors() throws Exception {
+	@Test
+	public void testLogicNoErrors() throws Exception {
 		Bean bean = (Bean) create("Bean");
 		bean.test9(-1, 0, 1, 0);
 		bean.test9(-1, -1, 1, 1);
 	}
 
-	@Test public void testLongReturnTypes() throws Exception {
+	@Test
+	public void testLongReturnTypes() throws Exception {
 		Bean bean = (Bean) create("Bean");
 		assertTrue(1l == bean.test16(1l));
-		assertTrue(new Long(1).equals(bean.test16(1l)));
+		assertTrue(Long.valueOf(1).equals(bean.test16(1l)));
 
 		try {
 			bean.test16(0);
@@ -228,7 +231,7 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 		}
 
 		try {
-			bean.test17(new Long(0));
+			bean.test17(Long.valueOf(0));
 			fail("Expected IllegalStateException - GT0 violated");
 		} catch (IllegalStateException e) {
 			// expected
@@ -236,7 +239,8 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 
 	}
 
-	@Test public void testLongs() throws Exception {
+	@Test
+	public void testLongs() throws Exception {
 		Bean bean = (Bean) create("Bean");
 
 		bean.test7(1l);
@@ -248,17 +252,18 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 			// expected
 		}
 
-		bean.test8(new Long(1l));
-		bean.test8(new Long(0));
+		bean.test8(Long.valueOf(1l));
+		bean.test8(Long.valueOf(0));
 		try {
-			bean.test8(new Long(-1l));
+			bean.test8(Long.valueOf(-1l));
 			fail("Expected IllegalArgumentException - GE0 violated");
 		} catch (IllegalArgumentException e) {
 			// expected
 		}
 	}
 
-	@Test public void testLT0Errors() throws Exception {
+	@Test
+	public void testLT0Errors() throws Exception {
 		Bean bean = (Bean) create("Bean");
 
 		try {
@@ -275,7 +280,8 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 		}
 	}
 
-	@Test public void testReturnTypeErrorChecking() throws Exception {
+	@Test
+	public void testReturnTypeErrorChecking() throws Exception {
 		try {
 			create("IllegalReturnBean");
 			fail();
@@ -290,35 +296,43 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 		void test1(@GE0 int b) {
 		}
 
-		@GT0 int test10(int a) {
+		@GT0
+		int test10(int a) {
 			return a;
 		}
 
-		@GT0 Integer test11(int a) {
+		@GT0
+		Integer test11(int a) {
 			return a;
 		}
 
-		@GT0 double test12(double a) {
+		@GT0
+		double test12(double a) {
 			return a;
 		}
 
-		@GT0 Double test13(double a) {
+		@GT0
+		Double test13(double a) {
 			return a;
 		}
 
-		@GT0 float test14(float a) {
+		@GT0
+		float test14(float a) {
 			return a;
 		}
 
-		@GT0 Float test15(float a) {
+		@GT0
+		Float test15(float a) {
 			return a;
 		}
 
-		@GT0 long test16(long a) {
+		@GT0
+		long test16(long a) {
 			return a;
 		}
 
-		@GT0 Long test17(long a) {
+		@GT0
+		Long test17(long a) {
 			return a;
 		}
 
@@ -347,13 +361,14 @@ public class NumericalInstrumentorTest extends AbstractContractInstrumentorTest 
 		}
 	}
 
-	class IllegalArgBean {
+	static class IllegalArgBean {
 		void test(@GT0 Object fii) {
 		}
 	}
 
-	class IllegalReturnBean {
-		@GT0 Object test() {
+	static class IllegalReturnBean {
+		@GT0
+		Object test() {
 			return null;
 		}
 	}
